# FireDetector

./: .gitignore  CMakeLists.txt  README.md  classifier.py  cleanbuild.sh  main.py  motion_analyser.py  readme.md
doc/: README.md  document.html  document.md  index.html  readme.md
doc/html/: document.html
example/: example_deploy.prototxt  example_mean.binaryproto
include/: MotionAnalyser.hpp  classifier.hpp  cmdline.h  global.hpp  progress_bar.hpp  taskControl.hpp  videoAnalyser.hpp
src/: MotionAnalyser.cpp  classifier.cpp  global.cpp  main.cpp  progress_bar.cpp  taskControl.cpp  videoAnalyser.cpp
